fixed btn dark mode

--- a/src/sass/component/_c-button__dark__mode.scss
+++ b/src/sass/component/_c-button__dark__mode.scss
@@ -1,5 +1,3 @@
-@import '../abstract/dark-mode.scss';
-
 .c-button__dark__mode {
     display: flex;
     align-items: center;
@@ -11,19 +9,9 @@
     right: 20px;
     border-radius: 50%;
     background-color: transparent;
+    border: 1.6px solid var(--color-text);
+    color: var(--color-text);
     cursor: pointer;
-}
-
-.dark-mode {
-    @include base-dark-mode();
-    border: 1.6px solid white;
-    background-image: url('../image/btn-icon-light.svg');
-}
-
-.light-mode {
-    @include base-dark-mode();
-    border: 1.6px solid black;
-    background-image: url('../image/btn-icon-dark.svg');
 }
 
 @media screen and (max-width: 820px) {
